<resources>
    <string name="app_name">知乎专栏</string>

    <string name="zhihu">知乎</string>
    <string name="movie">影视</string>
    <string name="music">音乐</string>
    <string name="develop">开发</string>
    <string name="book">读书写作</string>
    <string name="internet">科技生活</string>
    <string name="search_zl">自食其力</string>

    <string name="share">分享：</string>
    <string name="about">关于</string>
    <string name="thank">感谢开源</string>
    <string name="project_address">git地址：</string>
    <string name="share_about">知乎专栏app:https://github.com/7449/ZLSimple</string>
    <string name="exit_app">再按一次退出</string>
    <string name="zl_suffix">专栏suffix来源</string>
    <string name="search_title">请输入专栏suffix</string>
    <string name="dialog_ok">搜索</string>
    <string name="suffix_null">suffix不能为空</string>
    <string name="suffix_hint">suffix</string>
    <string name="limit">获取多少条数据,默认20条</string>
    <string name="suffix_title">专栏suffix：</string>
    <string name="suffix_message">确认要copy这个专栏的suffix吗？</string>

    <string name="network_error">网络异常</string>
    <string name="suffix_error">查找失败,请检查网络或者suffix</string>

    <string name="suffix">https://www.zhihu.com/question/21388193</string>
    <string name="project">rxjava,rxandroid \n retrofit,converter-gson,adapter-rxjava \n glide \n klog \n google \n greendao</string>
    <string name="search_explanation">如何查找专栏的suffix? \n 以木易聊影为例 \n 木易聊影的专栏地址为 \n https://zhuanlan.zhihu.com/happymuyi \n 那么木易聊影的suffix就是happymuyi \n 手机和电脑查找方法一样 \n 或者长按应用内你喜欢的专栏内容复制suffix \n 在这里查阅更多数据</string>
    <string name="zl_address">https://zhuanlan.zhihu.com/</string>
    <string name="suffix_copy">这个专栏的suffix已复制到粘贴板</string>
    <string name="list_ok">确认</string>
    <string name="git_address">https://github.com/7449/ZLSimple</string>
    <string name="detail_share">这个知乎专栏的分享内容还不错,推荐一下,他的知乎主页是：</string>
    <string name="dialog_annal">搜索历史</string>
    <string name="no_annal">没有搜索历史</string>
    <string name="annal_title">搜索历史</string>
    <string name="clear_db">清除数据库成功</string>
    <string name="emptyView">没有数据，点击重试</string>
    <string name="app_api_n">app有侵犯知乎权益的嫌疑,若被告知禁止使用api,本人会删除相关的东西以及代码 \n 请遵守知乎协议</string>

</resources>
