<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/zhihu"
            android:checked="true"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/zhihu" />
        <item
            android:id="@+id/movie"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/movie" />
        <item
            android:id="@+id/music"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/music" />
        <item
            android:id="@+id/develop"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/develop" />
        <item
            android:id="@+id/book"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/book" />
        <item
            android:id="@+id/internet"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/internet" />
        <item
            android:id="@+id/search"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/search_zl" />
    </group>
</menu>